# PythonCrashCourse

./: .breakpoints  .replit  README.md  fibonacci.py  parrotbot.py  pyproject.toml
2022/Retake/Chapter2/: 00.py  2-1.py  2-10.py  2-2.py  2-3.py  2-4.py  2-5.py  2-6.py  2-7.py  2-9.py
2022/Retake/Chapter3/: 00.py  3-1.py  3-10.py  3-2.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py  3-8.py  3-9.py
Chapter4/: 4-10.py  4-13.py  Chapter4.py
Chapter5/: 5-10.py  5-2.py  5-3.py  5-5.py  5-6.py  5-8.py  Chapter5.py
Chapter6/: 6-2.py  Chapter6.py
ExtraFiles/: .breakpoints
Originals/Chapter4/: 4-10.py  4-11.py  4-12.py  4-15.py
Originals/Chapter5/: 5-1.py  5-11.py  5-4.py  5-7.py  5-9.py
Originals/Chapter6/: 6-1.py  6-3.py
